Update: Readme updated

--- a/spam-frontend/.env.production
+++ b/spam-frontend/.env.production
@@ -1,1 +1,7 @@
 REACT_APP_API_BASE=https://spam-detector-backend-fu39.onrender.com
+REACT_APP_NAME = "Spam Frontend"
+REACT_APP_VERSION = "1.0.0"
+REACT_APP_DESCRIPTION = "A frontend for the Spam application"
+REACT_APP_AUTHOR = "Mridul Roy"
+REACT_APP_AUTHOR_EMAIL = "mridulroy543@gmail.com"
+GENERATE_SOURCEMAP=false  
